fix: dynamic vh height on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -44,5 +44,5 @@ body {
 
 .rds-video {
   width: 100%;
-  height: 500px;
+  height: 60vh;
 }
